spacing & font size fix

--- a/main/styles/contact.css
+++ b/main/styles/contact.css
@@ -98,7 +98,11 @@ ul {
 
 /* responsive */
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 450px) {
+  .section {
+    margin-top: 25px;
+  }
+  
   .contacts {
     flex-wrap: wrap;
   }
