--- a/main/styles/personal.css
+++ b/main/styles/personal.css
@@ -65,6 +65,7 @@
   .projects {
     margin: 25px auto 0;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 25px;
   }
 
   .project {
