--- a/main/styles/responsive.css
+++ b/main/styles/responsive.css
@@ -39,6 +39,10 @@
     font-size: 1.75rem;
   }
 
+  h3 {
+    font-size: 1.4rem;
+  }
+
   .sidebar a {
     padding: 20px;
   }
@@ -55,6 +59,10 @@
 
   h2 {
     font-size: 1.25rem;
+  }
+
+  h3 {
+    font-size: 1rem;
   }
 
   .sidebar {
