--- a/main/styles/root.css
+++ b/main/styles/root.css
@@ -12,6 +12,11 @@ h2 {
   margin-top: 0;
 }
 
+h3 {
+  font-size: 1.5rem;
+  margin-top: 0;
+}
+
 p {
   font-family: "Glacial Indifference";
   line-height: 1.3rem;
